# Easy-Factor-Graph-py

./: .gitignore  CMakeLists.txt  HowToUpdateThePackage  HowToUpdateThePackage.md  MetaData.json  ReadMe.md  foo.py  updatePackage.py
.github/workflows/: runTests.yml  wheels.yml
src/: CMakeLists.txt  bindings.cpp  categoric.cpp  factor.cpp  model.cpp  terraform.py
src/header/EasyFactorGraph/python/: Wrapper.h  categoric.h  factor.h  io.h  model.h
test/: .gitignore  CMakeLists.txt  main.py  terraform.py
test/cases/: categoricTest.py  factorTest.py  ioTest.py  modelTest.py
